--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,6 @@
+@import "leaflet/dist/leaflet.css";
+@import "leaflet-draw/dist/leaflet.draw.css";
+
 :root{
   --primary-color: #007BFF;
   --primary-hover-color: #0056b3;
