--- a/frontend/src/components/Map/Map.module.css
+++ b/frontend/src/components/Map/Map.module.css
@@ -1,6 +1,6 @@
 .leafletContainer{
   width: 100%;
-  height: 500px;
+  height: 90%;
   border: var(--border);
   border-radius: var(--border-radius);
   pointer-events: auto !important;
