--- a/frontend/src/components/Map/Map.module.css
+++ b/frontend/src/components/Map/Map.module.css
@@ -1,7 +1,8 @@
 .leafletContainer{
-  width: 100%;
-  height: 80%;
+  width: 90vw;
+  height: 80vh;
   border: var(--border);
   border-radius: var(--border-radius);
   pointer-events: auto !important;
+  top: 10px;
 }
