--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,3 +23,8 @@ body{
   font-family: var(--font-family);
   background-color: var(--neutral-bg);
 }
+
+html, body {
+  overflow: hidden;
+  height: 100%;
+}
